--- a/src/sass/base/main-page/_loader.scss
+++ b/src/sass/base/main-page/_loader.scss
@@ -26,8 +26,15 @@ $delay : calc($duration/6);
     }
 
     @media screen and (min-width: 1440px) {
-        transform: scale(1.5);
-        right: 200px;
+        position: absolute;
+        bottom: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(1.5) ;
+
+        // top: 0;
+        // left: 50vw; 
+        // bottom: 0;
+        // right: 0;
     }
 
 }
